# ircr

./: Cargo.toml  README.md
src/: main.rs
static/: index.html  reset.css  script.js  style.css
