[package]
name = "ircr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
tokio = { version = "1.23.1", features = ["full"] }

[dev-dependencies]
rand = "0.8.5"
